# ai-augmented-sdlc-hitl-core

./: .gitattributes  .gitignore  .markdownlint.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: core-ci.yml
core/: README.md  pyproject.toml
core/sdlc_core/: __init__.py  assign_model.py  check.py  db.py  diff_summary.py  enums.py  metrics.py  phase_status.py  prompt_validator.py  run_control.py  scaffold.py  schema.sql  session.py  setup_run.py  status.py
core/sdlc_core/providers/: __init__.py  base.py  intervention.py  langchain_provider.py  logged.py  manual.py  ollama.py  registry.py
core/sdlc_core/providers/examples/: __init__.py  anthropic_provider.py  gemini_provider.py  langchain_ollama_provider.py  litellm_provider.py  openai_provider.py
core/tests/: __init__.py  conftest.py  test_assign_model.py  test_check.py  test_db.py  test_enums.py  test_metrics.py  test_operator_cli.py  test_phase_status.py  test_prompt_validator.py  test_providers.py  test_providers_examples.py  test_providers_intervention.py  test_providers_logged.py  test_run_control.py  test_scaffold.py  test_session.py  test_setup_run.py
protocol/: approaches.md  architecture.md  design.md  implementation.md  interactions.md  logging.md  metrics.md  requirements.md  runbook.md  sdlc.md  transition.md  validation.md  verification.md
requirements/project1/: README.md  REQ-01.md  REQ-02.md  REQ-03.md  REQ-04.md  REQ-05.md  REQ-06.md  REQ-07.md  REQ-08.md  REQ-09.md  REQ-10.md  REQ-11.md  REQ-12.md  REQ-13.md  REQ-14.md  REQ-15.md  REQ-16.md  REQ-17.md  REQ-18.md  REQ-19.md  REQ-20.md  REQ-21.md  REQ-22.md  REQ-23.md  REQ-24.md  REQ-25.md  REQ-26.md  REQ-27.md  REQ-28.md  REQ-29.md  REQ-30.md  REQ-31.md  REQ-32.md  REQ-33.md  REQ-34.md  REQ-35.md  REQ-36.md  REQ-37.md  REQ-38.md  REQ-39.md  (+22 more)
requirements/project2/: README.md  REQ-1.md  REQ-2.md  REQ-3.md  REQ-4.md  REQ-5.md
scripts/requirements/: README.md  __init__.py  assign_priority.py  main.py  models.py  moscow.py  parser.py  register.py  renumber.py  update_register.py  validate.py
